# astrora

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: benchmark.yml  publish-crates.yml  release.yml
benches/: lambert.rs  propagators.rs
benchmarks/: lambert_benchmark.py  lambert_python_baseline.py
dev/bench/: data.js
dev/bench/full/: data.js
examples/: animation_demo.py  earth_mars_transfer.py  gravity_assist.py  hohmann_transfer.py  orbit_plotting_complete.py  orbit_propagation_perturbations.py  plotting_demo.py  porkchop_plot.py
notebooks/: 01_quickstart.ipynb  02_orbital_mechanics.ipynb  03_maneuvers_transfers.ipynb  04_visualization_plotting.ipynb  05_advanced_techniques.ipynb
python/astrora/: __init__.py  bodies.py  coordinates.py  maneuver.py  time.py  units.py  util.py
python/astrora/plotting/: __init__.py  animation.py  groundtrack.py  interactive.py  porkchop.py  static.py
python/astrora/twobody/: orbit.py
python/poliastro/: __init__.py
python/poliastro/twobody/: __init__.py
src/: lib.rs
src/coordinates/: frames.rs  mod.rs  rotations.rs  transform.rs
src/core/: anomaly.rs  constants.rs  elements.rs  error.rs  fast_math.rs  linalg.rs  mod.rs  numerical.rs  numpy_integration.rs  state.rs  time.rs
src/maneuvers/: bielliptic.rs  budget.rs  gravityassist.rs  hohmann.rs  lambert.rs  mod.rs  planechange.rs  rendezvous.rs
src/propagators/: keplerian.rs  mod.rs  perturbations.rs  perturbations_static.rs  stm.rs
src/satellite/: coverage.rs  eclipse.rs  groundtrack.rs  lifetime.rs  mod.rs  omm.rs  sgp4_wrapper.rs  tle.rs  visibility.rs
tests/: benchmark_batch_anomaly.py  benchmark_hapsira_comparison.py  benchmark_numpy_overhead.py  benchmark_parallel_batch.py  conftest.py  test_animation.py  test_anomaly_conversions.py  test_batch_anomaly_conversions.py  test_batch_propagation.py  test_batch_transforms.py  test_bielliptic_transfer.py  test_cartesian_state.py  test_constants.py  test_coordinates_integration.py  test_coverage.py  test_delta_v_budget.py  test_drag.py  test_eclipse.py  test_equinoctial_elements.py  test_fixtures_verification.py  test_frames.py  test_gmat_validation.py  test_gravity_assist.py  test_ground_track.py  test_hohmann_transfer.py  test_import.py  test_j2_perturbation.py  test_known_orbits.py  test_longterm_stability.py  test_maneuver.py  test_numpy_integration.py  test_orbit.py  test_orbit_helpers.py  test_orbital_elements.py  test_planechange.py  test_plotting.py  test_propagator.py  test_reference_data.py  test_reference_validation.py  test_regression.py  (+13 more)
